# ramaximization-ranshe-bylo-luchshe

./: Main.ipynb  Output Table.xlsx  README.md  ramaximization.ipynb
ramax_frontend-master/: README.md  nuxt.config.js  package-lock.json  package.json
ramax_frontend-master/components/: Header.vue
ramax_frontend-master/pages/: index.vue
solution/: CMakeLists.txt  Genetic.cpp  Genetic.h  Reader.cpp  Reader.h  Solver.cpp  Solver.h  Writer.cpp  Writer.h  constants.cpp  constants.h  main.cpp
solution/csv_tables/: max_fly.csv  max_starts.csv  qualified.csv  quals.csv  required_personal.csv  rest_prior.csv  rest_req.csv
solution/data/: InputData.cpp  InputData.h  Month.cpp  Month.h  MonthResult.cpp  Mounth.cpp  Mounth.h  OutputData.cpp  OutputData.h  Person.cpp  Person.h  Qual.cpp  Qual.h  Qualification.cpp  Qualification.h  Request.h  Staff.h  TotalRest.cpp  TotalRest.h
solution/input/: InputData.cpp  InputData.h  Month.h  Qualification.cpp  Qualification.h  Request.h  Staff.cpp  Staff.h
solution/output/: MonthResult.cpp  MonthResult.h  OutputData.h  PersonalRest.cpp  PersonalRest.h  TotalRest.h
